// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`templates.reader creates the markup 1`] = `
"
    
      <div class=\\"figure__large figure__inline figure__inline--portrait test\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            
    
      <img class=\\"portrait\\" alt=\\"test\\" src=\\"../images/test\\"/>
    
    <div class=\\"figcaption\\">
      <p class=\\"small\\">test</p>
    </div>
    
          </div>
        </figure>
      </div>
    
"
`;

exports[`templates.reader creates the markup 2`] = `
"
    
      <div class=\\"figure__large figure__inline figure__inline--landscape test\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            
    
      <img class=\\"landscape\\" alt=\\"test\\" src=\\"../images/test\\"/>
    
    <div class=\\"figcaption\\">
      <p class=\\"small\\">test</p>
    </div>
    
          </div>
        </figure>
      </div>
    
"
`;

exports[`templates.reader creates the markup 3`] = `
"
    
      <div class=\\"figure__large figure__inline figure__inline--portrait-high test\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            
    
      <img class=\\"portrait-high\\" alt=\\"test\\" src=\\"../images/test\\"/>
    
    <div class=\\"figcaption\\">
      <p class=\\"small\\">test</p>
    </div>
    
          </div>
        </figure>
      </div>
    
"
`;

exports[`templates.reader creates the markup 4`] = `
"
    
      <div class=\\"figure__large figure__inline figure__inline--square test\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            
    
      <img class=\\"square\\" alt=\\"test\\" src=\\"../images/test\\"/>
    
    <div class=\\"figcaption\\">
      <p class=\\"small\\">test</p>
    </div>
    
          </div>
        </figure>
      </div>
    
"
`;

exports[`templates.reader creates the markup 5`] = `
"
    
      <div class=\\"figure__large figure__large--media figure__inline--square test\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            <div class=\\"audio-or-video\\">
              <audio-or-video id=\\"audio-or-video-1\\" autoplay=\\"false\\">
                <source />
                <div class=\\"media__fallback__audio-or-video media__fallback--image\\">
                  <figure>
                    <img src=\\"test.jpg\\" alt=\\"Media fallback image\\"/>
                  </figure>
                </div>
                <p class=\\"media__fallback__audio-or-video media__fallback--text\\">Your device does not support the HTML5 audio-or-video API.</p>
              </audio-or-video>
            </div>
            <div class=\\"figcaption\\">
              <p class=\\"small\\">
                test<br/>
                <a href=\\"1.xhtml#ref1\\">Return</a>
              </p>
            </div>
          </div>
        </figure>
      </div>
    
    "
`;

exports[`templates.reader creates the markup 6`] = `
"
    
      <div class=\\"figure__large figure__large--media figure__inline--square test\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            <div class=\\"audio-or-video\\">
              <audio-or-video id=\\"audio-or-video-1\\" autoplay=\\"false\\">
                <source />
                <div class=\\"media__fallback__audio-or-video media__fallback--image\\">
                  <figure>
                    <img src=\\"test.jpg\\" alt=\\"Media fallback image\\"/>
                  </figure>
                </div>
                <p class=\\"media__fallback__audio-or-video media__fallback--text\\">Your device does not support the HTML5 audio-or-video API.</p>
              </audio-or-video>
            </div>
            <div class=\\"figcaption\\">
              <p class=\\"small\\">
                test<br/>
                <a href=\\"1.xhtml#ref1\\">Return</a>
              </p>
            </div>
          </div>
        </figure>
      </div>
    
    "
`;

exports[`templates.reader creates the markup 7`] = `
"
    
      <div class=\\"figure__large figure__large--iframe\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            <div class=\\"iframe\\">
              <iframe
                src=\\"test\\"
                title=\\"test-title\\"
                width=\\"test-width\\"
                height=\\"test-height\\"
                webkitallowfullscreen=\\"webkitallowfullscreen\\"
                mozallowfullscreen=\\"mozallowfullscreen\\"
                allowfullscreen=\\"allowfullscreen\\"
                allow=\\"autoplay\\"
                frameborder=\\"0\\"
                scrolling=\\"no\\"
              />
            </div>

            <div class=\\"figcaption\\">
                <p class=\\"small\\">
                  test<br/>
                  <a href=\\"1.xhtml#ref1\\">Return</a>
              </p>
            </div>
          </div>
        </figure>
      </div>
    
    "
`;

exports[`templates.reader creates the markup 8`] = `
"
    
      <div class=\\"figure__large figure__large--vimeo figure__large--undefined\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            <div class=\\"vimeo undefined\\">
              <div class=\\"embed unsupported\\">
                <img src=\\"test.jpg\\" alt=\\"Poster Image\\" />
                <iframe
                  data-vimeo=\\"true\\"
                  data-vimeo-poster=\\"test.jpg\\"
                  data-aspect-ratio=\\"undefined\\"
                  src=\\"https://player.vimeo.com/video/testundefined\\" webkitallowfullscreen=\\"webkitallowfullscreen\\" mozallowfullscreen=\\"mozallowfullscreen\\" allowfullscreen=\\"allowfullscreen\\" frameborder=\\"0\\" />
              </div>
            </div>

            <div class=\\"figcaption\\">
              <p class=\\"small\\">
                test<br/>
                <a href=\\"1.xhtml#ref1\\">Return</a>
              </p>
            </div>
          </div>
        </figure>
      </div>
    
    "
`;

exports[`templates.reader creates the markup 9`] = `
"
    <section epub:type=\\"loi\\" class=\\"chapter figures\\">
      <div class=\\"figure__large figure__large--portrait\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            
    <a href=\\"1.xhtml#ref1\\">
      <img class=\\"portrait\\" alt=\\"test\\" src=\\"../images/test\\"/>
    </a>
    <div class=\\"figcaption\\">
      <p class=\\"small\\">test</p>
    </div>
    
          </div>
        </figure>
      </div>
    </section>
"
`;

exports[`templates.reader creates the markup 10`] = `
"
    <section epub:type=\\"loi\\" class=\\"chapter figures\\">
      <div class=\\"figure__large figure__large--landscape\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            
    <a href=\\"1.xhtml#ref1\\">
      <img class=\\"landscape\\" alt=\\"test\\" src=\\"../images/test\\"/>
    </a>
    <div class=\\"figcaption\\">
      <p class=\\"small\\">test</p>
    </div>
    
          </div>
        </figure>
      </div>
    </section>
"
`;

exports[`templates.reader creates the markup 11`] = `
"
    <section epub:type=\\"loi\\" class=\\"chapter figures\\">
      <div class=\\"figure__large figure__large--portrait-high\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            
    <a href=\\"1.xhtml#ref1\\">
      <img class=\\"portrait-high\\" alt=\\"test\\" src=\\"../images/test\\"/>
    </a>
    <div class=\\"figcaption\\">
      <p class=\\"small\\">test</p>
    </div>
    
          </div>
        </figure>
      </div>
    </section>
"
`;

exports[`templates.reader creates the markup 12`] = `
"
    <section epub:type=\\"loi\\" class=\\"chapter figures\\">
      <div class=\\"figure__large figure__large--square\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            
    <a href=\\"1.xhtml#ref1\\">
      <img class=\\"square\\" alt=\\"test\\" src=\\"../images/test\\"/>
    </a>
    <div class=\\"figcaption\\">
      <p class=\\"small\\">test</p>
    </div>
    
          </div>
        </figure>
      </div>
    </section>
"
`;

exports[`templates.reader creates the markup 13`] = `
"
    <section epub:type=\\"loi\\" class=\\"chapter figures\\">
      <div class=\\"figure__large figure__large--media figure__inline--square test\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            <div class=\\"audio-or-video\\">
              <audio-or-video id=\\"audio-or-video-1\\" autoplay=\\"false\\">
                <source />
                <div class=\\"media__fallback__audio-or-video media__fallback--image\\">
                  <figure>
                    <img src=\\"test.jpg\\" alt=\\"Media fallback image\\"/>
                  </figure>
                </div>
                <p class=\\"media__fallback__audio-or-video media__fallback--text\\">Your device does not support the HTML5 audio-or-video API.</p>
              </audio-or-video>
            </div>
            <div class=\\"figcaption\\">
              <p class=\\"small\\">
                test<br/>
                <a href=\\"1.xhtml#ref1\\">Return</a>
              </p>
            </div>
          </div>
        </figure>
      </div>
    </section>
    "
`;

exports[`templates.reader creates the markup 14`] = `
"
    <section epub:type=\\"loi\\" class=\\"chapter figures\\">
      <div class=\\"figure__large figure__large--media figure__inline--square test\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            <div class=\\"audio-or-video\\">
              <audio-or-video id=\\"audio-or-video-1\\" autoplay=\\"false\\">
                <source />
                <div class=\\"media__fallback__audio-or-video media__fallback--image\\">
                  <figure>
                    <img src=\\"test.jpg\\" alt=\\"Media fallback image\\"/>
                  </figure>
                </div>
                <p class=\\"media__fallback__audio-or-video media__fallback--text\\">Your device does not support the HTML5 audio-or-video API.</p>
              </audio-or-video>
            </div>
            <div class=\\"figcaption\\">
              <p class=\\"small\\">
                test<br/>
                <a href=\\"1.xhtml#ref1\\">Return</a>
              </p>
            </div>
          </div>
        </figure>
      </div>
    </section>
    "
`;

exports[`templates.reader creates the markup 15`] = `
"
    <section epub:type=\\"loi\\" class=\\"chapter figures\\">
      <div class=\\"figure__large figure__large--iframe\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            <div class=\\"iframe\\">
              <iframe
                src=\\"test\\"
                title=\\"test-title\\"
                width=\\"test-width\\"
                height=\\"test-height\\"
                webkitallowfullscreen=\\"webkitallowfullscreen\\"
                mozallowfullscreen=\\"mozallowfullscreen\\"
                allowfullscreen=\\"allowfullscreen\\"
                allow=\\"autoplay\\"
                frameborder=\\"0\\"
                scrolling=\\"no\\"
              />
            </div>

            <div class=\\"figcaption\\">
                <p class=\\"small\\">
                  test<br/>
                  <a href=\\"1.xhtml#ref1\\">Return</a>
              </p>
            </div>
          </div>
        </figure>
      </div>
    </section>
    "
`;

exports[`templates.reader creates the markup 16`] = `
"
    
      <div class=\\"figure__large figure__inline figure__inline--portrait break-before\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            
    
      <img class=\\"portrait\\" alt=\\"test\\" src=\\"../images/test\\"/>
    
    <div class=\\"figcaption\\">
      <p class=\\"small\\">test</p>
    </div>
    
          </div>
        </figure>
      </div>
    
"
`;

exports[`templates.reader creates the markup 17`] = `
"
    
      <div class=\\"figure__large figure__inline figure__inline--landscape break-before\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            
    
      <img class=\\"landscape\\" alt=\\"test\\" src=\\"../images/test\\"/>
    
    <div class=\\"figcaption\\">
      <p class=\\"small\\">test</p>
    </div>
    
          </div>
        </figure>
      </div>
    
"
`;

exports[`templates.reader creates the markup 18`] = `
"
    
      <div class=\\"figure__large figure__inline figure__inline--portrait-high break-before\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            
    
      <img class=\\"portrait-high\\" alt=\\"test\\" src=\\"../images/test\\"/>
    
    <div class=\\"figcaption\\">
      <p class=\\"small\\">test</p>
    </div>
    
          </div>
        </figure>
      </div>
    
"
`;

exports[`templates.reader creates the markup 19`] = `
"
    
      <div class=\\"figure__large figure__inline figure__inline--square break-before\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            
    
      <img class=\\"square\\" alt=\\"test\\" src=\\"../images/test\\"/>
    
    <div class=\\"figcaption\\">
      <p class=\\"small\\">test</p>
    </div>
    
          </div>
        </figure>
      </div>
    
"
`;

exports[`templates.reader creates the markup 20`] = `
"
    
      <div class=\\"figure__large figure__large--media figure__inline--square break-before\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            <div class=\\"audio-or-video\\">
              <audio-or-video id=\\"audio-or-video-1\\" autoplay=\\"false\\">
                <source />
                <div class=\\"media__fallback__audio-or-video media__fallback--image\\">
                  <figure>
                    <img src=\\"test.jpg\\" alt=\\"Media fallback image\\"/>
                  </figure>
                </div>
                <p class=\\"media__fallback__audio-or-video media__fallback--text\\">Your device does not support the HTML5 audio-or-video API.</p>
              </audio-or-video>
            </div>
            <div class=\\"figcaption\\">
              <p class=\\"small\\">
                test<br/>
                <a href=\\"1.xhtml#ref1\\">Return</a>
              </p>
            </div>
          </div>
        </figure>
      </div>
    
    "
`;

exports[`templates.reader creates the markup 21`] = `
"
    
      <div class=\\"figure__large figure__large--media figure__inline--square break-before\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            <div class=\\"audio-or-video\\">
              <audio-or-video id=\\"audio-or-video-1\\" autoplay=\\"false\\">
                <source />
                <div class=\\"media__fallback__audio-or-video media__fallback--image\\">
                  <figure>
                    <img src=\\"test.jpg\\" alt=\\"Media fallback image\\"/>
                  </figure>
                </div>
                <p class=\\"media__fallback__audio-or-video media__fallback--text\\">Your device does not support the HTML5 audio-or-video API.</p>
              </audio-or-video>
            </div>
            <div class=\\"figcaption\\">
              <p class=\\"small\\">
                test<br/>
                <a href=\\"1.xhtml#ref1\\">Return</a>
              </p>
            </div>
          </div>
        </figure>
      </div>
    
    "
`;

exports[`templates.reader creates the markup 22`] = `
"
    
      <div class=\\"figure__large figure__large--iframe\\">
        <figure id=\\"1\\">
          <div class=\\"figure__items\\">
            <div class=\\"iframe\\">
              <iframe
                src=\\"test\\"
                title=\\"test-title\\"
                width=\\"test-width\\"
                height=\\"test-height\\"
                webkitallowfullscreen=\\"webkitallowfullscreen\\"
                mozallowfullscreen=\\"mozallowfullscreen\\"
                allowfullscreen=\\"allowfullscreen\\"
                allow=\\"autoplay\\"
                frameborder=\\"0\\"
                scrolling=\\"no\\"
              />
            </div>

            <div class=\\"figcaption\\">
                <p class=\\"small\\">
                  test<br/>
                  <a href=\\"1.xhtml#ref1\\">Return</a>
              </p>
            </div>
          </div>
        </figure>
      </div>
    
    "
`;
